Replace assertEquals() for expected type boolean with assertFalse() and assertTrue() in JCToolsWrapperTest